src/Components/Home/index.css
*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

.wrapper{
	height: 100vh;
	width: 100%;
}

.overlay-mask{
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: rgba(0,0,0,0.3);
    z-index: 10;
    position: fixed;
}

.overlay-mask .fa-spin {
	position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    font-size: 100px;
}

.chart-container{
	border: 1px solid #ccc;
	height: calc(100vh - 56px);
	width: 100%;
	position: relative;
	display: flex;
	flex-wrap: wrap;
}

.draggable-elements{
	height: 100%;
	width: 100%;
	position: absolute;
	top: 0;
	left: 0;	
}

.elements-wrapper{
	width: 25%;
	height: 35vh;
	margin-left: 5px;
	margin-right: 5px;
	position: absolute;
}

.chart{
	margin-top: 10px;
	width: 100%;
	height: 100%;
	border: 1px solid #ccc;
	box-shadow: 1px 2px 3px #ccc;
}

.chart-thumbnail-img{
	width: 45px;
	height: 30px;
}

.chart-menu-heading{
	font-size: 15px;
	margin-left: 15px;
}

select{
	height: 30px;
    margin-top: 10px;
    width: 120px;
    padding: 5px;
    font-size: 13px;
    outline: none;
    border: 1px solid #ccc;
    background: #f2f2f2;
}

select::-ms-expand {	display: none; }
select{
    -webkit-appearance: none;
    appearance: none;
}

.dropdown-menu{
	left: -100px;
}

.chart-element-header{
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.draggable-div{
	height: 30px;
    box-shadow: 1px 2px 3px #ccc;
    width: 70px;
    border: 1px solid #ccc;
    color: #877;
    cursor: move;
    text-align: center;
    margin-top: 10px;
    user-select: none;
}

#brandingLogo{
	display: none;
}

.swal-text{
	text-align: center;
}

@media (max-width: 992px){
	.elements-wrapper{
		width: 95%;
		margin-left: 1.5rem;
	}
	#navbarNavDropdown{
		border-top: 1px solid #ccc;
		margin-top: 10px;
	}
}

@media (max-width: 768px){
	.chart-container{
		flex-direction: column;
	}
	.elements-wrapper{
		width: 100%;
		margin-left: 0;
		height: 100vh;
		overflow: auto;
	}
	.overlay-mask .fa-spin {
	    font-size: 50px;
	}
}

